--- a/Bilan_20101231.md
+++ b/Bilan_20101231.md
@@ -1,6 +1,8 @@
 <link rel="stylesheet" href="normal4.css">
 
-## Bilan_20101231
+### Bilan présenté par le syndic au 31.12.2010
+
+&nbsp;
 
 | Actif | &nbsp; | Passif | &nbsp; |
 | --- | ---: | --- | ---:|
@@ -18,3 +20,8 @@ Arrondis | 1,53 € |   |
 Charges à répartir (= charges du trimestre 2010-IV) | 138.005,29 € |   |  
 Total Actif | 573.631,10 € | Total Passif | 573.631,10 €
 Total bilantaire au 31.12.2009 | 508.342,81 € | Différence 2010 (par rapport au 31.12.2009) | + 12,84 %
+
+### Verdict de l'AG du 28.04.2011
+
+* Approbation du bilan au 31.12.2010
+* Décharge accordée au syndic pour sa gestion en 2010
