--- a/Bilan_20101231.md
+++ b/Bilan_20101231.md
@@ -9,7 +9,7 @@
 | Propriétaires<br>(= arriérés de charges) | 2.004,91 € | Provision base appartements<br>(= Fonds de roulement) | 181.566,98 € |
 | Sinistre 10046<br>(= décharges 3+4) | 302,50 € | Provision base garages<br>(= Fonds de roulement) | 14.597,84 € |
 | Sinistre 10049<br>(= dégats des eaux) | 187,55 € | Provision charges de location<br>ancienne loge (= Lopez) | 550,00 €
-Sinistre 8013<br>(= bris de vitre) | 640,74 € | Provision charges de location<br>ancienne loge (= Montenegro-Lopez) | 600,00 €
+Sinistre 8013<br>(= bris de vitre) | 640,74 € | Provision charges de location<br>ancienne loge<br>(= Montenegro-Lopez) | 600,00 €
 Sinistre 8020<br>(= dégats des eaux) | 2.729,30 € | Garantie conciergerie<br>(= Lopez) | 740,00 €
 Sinistre 8037<br>(= garage Yousef) | 221,73 € | Fonds de réserve général | 324.185,94 €
 Sinistre 9505<br>(= Miri) | 1.622,78 € | Intérêts + Clause Karapetian | 208,48 €
