--- a/Bilan_20101231.md
+++ b/Bilan_20101231.md
@@ -4,14 +4,14 @@
 
 | Actif | &nbsp; | Passif | &nbsp; |
 | --- | ---: | --- | ---:|
-| Propriétaires<br>(= arriérés de charges) | 2.004,91 € | Provision base appartements<br>(= Fonds de roulement) | 181.566,98 € |
-| Sinistre 10046<br>(= décharges 3+4) | 302,50 € | Provision base garages<br>(= Fonds de roulement) | 14.597,84 € |
+| Propriétaires<br>(= arriérés de charges) | 2.004,91 € | Provision base<br>appartements<br>(= Fonds de roulement) | 181.566,98 € |
+| Sinistre 10046<br>(= décharges 3+4) | 302,50 € | Provision base<br>garages<br>(= Fonds de roulement) | 14.597,84 € |
 | Sinistre 10049<br>(= dégats des eaux) | 187,55 € | Provision charges<br>location ancienne loge<br>(= Lopez) | 550,00 €
 Sinistre 8013<br>(= bris de vitre) | 640,74 € | Provision charges<br>location ancienne loge<br>(= Montenegro-Lopez) | 600,00 €
 Sinistre 8020<br>(= dégats des eaux) | 2.729,30 € | Garantie conciergerie<br>(= Lopez) | 740,00 €
 Sinistre 8037<br>(= garage Yousef) | 221,73 € | Fonds de réserve général | 324.185,94 €
 Sinistre 9505<br>(= Miri) | 1.622,78 € | Intérêts + Clause Karapetian | 208,48 €
-Sinistre 9545<br>(= dégats des eaux) | 847,50 € | Fournisseurs<br>(= dettes non encore réglées) | 51.181,86 €
+Sinistre 9545<br>(= dégats des eaux) | 847,50 € | Fournisseurs<br>(= dettes non réglées) | 51.181,86 €
 Bonus Account<br>310-0582632-39<br>(= compte à terme) | 343.362,54 € |   |  
 ING Compte à vue | 83.704,73 € |   |  
 Arrondis | 1,53 € |   |  
@@ -19,7 +19,7 @@ Charges à répartir<br>(= charges du trimestre 2010-IV) | 138.005,29 € |   |
 **Total Actif** | 573.631,10 € | **Total Passif** | 573.631,10 €
 Total bilantaire<br>au 31.12.2009 | 508.342,81 € | Différence 2010<br>(par rapport au 31.12.2009) | **+ 12,84 %**
 
-### Verdict de l'AG du 28.04.2011
+# Verdict de l'AG du 28.04.2011
 
 * Approbation du bilan au 31.12.2010
 * Décharge accordée au syndic pour sa gestion en 2010
