--- a/Bilan_20101231.md
+++ b/Bilan_20101231.md
@@ -19,7 +19,7 @@ Charges à répartir<br>(= charges trim. 2010-IV) | 138.005,29 € |   |
 **Total Actif** | 573.631,10 € | **Total Passif** | 573.631,10 €
 Total bilantaire<br>au 31.12.2009 | 508.342,81 € | Différence 2010<br>(par rapport au 31.12.2009) | **+ 12,84 %**
 
-# Verdict de l'AG du 28.04.2011
+## Verdict de l'Assemblée Générale du 28.04.2011
 
 * Approbation du bilan au 31.12.2010
 * Décharge accordée au syndic *SA Regimo NV* pour sa gestion en 2010
